# getemails

./: .env.example  .gitignore  README.md  pyproject.toml
config/: accounts.example.yaml
emlar/: __init__.py  cli.py  config.py  db.py  email_utils.py  fetch.py  filters.py  sorting.py  writer.py
emlar/providers/: __init__.py  aol.py  base.py  gmail.py  icloud.py  imap.py
getemails/: __init__.py  account.py  cli.py  db.py  email_utils.py  fetch.py  filters.py  local.py  logger.py  storage.py  writer.py
getemails/providers/: __init__.py  aol.py  base.py  gmail.py  icloud.py  imap.py
