[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "emlar"
version = "0.2.0"
description = "A command-line tool for importing, searching, and exporting email archives."
requires-python = ">=3.11"
dependencies = [
    "click>=8.1"
]

[project.scripts]
emlar = "emlar.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["emlar"]